correct parameters for rg estimation

--- a/6_stru_factor.ipynb
+++ b/6_stru_factor.ipynb
@@ -202,34 +202,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "k [0.   0.01 0.02 0.03 0.04]\n",
-      "k^2 [0.     0.0001 0.0004 0.0009 0.0016]\n",
-      "Fit:  [-47.34547726   0.99956797]\n",
-      "142.03643178211178\n",
-      "150.0\n"
+      "Slope: -47.345477260704094\n",
+      "Intercept: 0.9995679663092791\n",
+      "r_value: -0.9998709529481333\n",
+      "p_value: 1.7597362546520687e-06\n",
+      "std_err: 0.43918646700900493\n",
+      "\n",
+      "Rg2 Estimated: 142.0364317821123\n",
+      "Rg2 Error: 1.3175594010270149\n",
+      "Rg2 Theoretical: 150.0\n"
      ]
     }
    ],
    "source": [
     "# Liniar fit of Ik2\n",
     "fit_index = 5\n",
-    "print('k', k[:fit_index])\n",
-    "print('k^2', k2[:fit_index])\n",
-    "fit = np.polyfit(k2[:fit_index], Ik2[:fit_index], 1)  # Fit Ik2 to a line\n",
-    "print('Fit: ', fit)\n",
-    "\n",
-    "Rg2_fit = -3 * fit[0]   # Radius of gyration squared\n",
-    "print(Rg2_fit)\n",
-    "\n",
-    "# Compare with Rg2\n",
-    "print(Rg2)"
+    "# Fit using scipy\n",
+    "from scipy import stats\n",
+    "slope, intercept, r_value, p_value, std_err = stats.linregress(k2[:fit_index], Ik2[:fit_index])\n",
+    "# Explain fit\n",
+    "print('Slope:', slope)\n",
+    "print('Intercept:', intercept)\n",
+    "print('r_value:', r_value)\n",
+    "print('p_value:', p_value)\n",
+    "print('std_err:', std_err)\n",
+    "print('\\nRg2 Estimated:', -3 * slope)\n",
+    "print('Rg2 Error:', std_err * 3)\n",
+    "print('Rg2 Theoretical:', Rg2)"
    ]
   }
  ],
